--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -39,7 +39,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: npm install
-        run: npm ci
+        run: npm install
 
       - name: Build
         run: hugo --minify
