--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
-          node-version: 'latest'
+          node-version: 'lts/*'
 
       - name: Cache dependencies
         uses: actions/cache@v2
