--- a/config.toml
+++ b/config.toml
@@ -75,6 +75,7 @@ description = "Self hosted photo management"
 languageName ="English"
 # Weight used for sorting.
 weight = 1
+
 [languages.de]
 title = "photocastle"
 description = "Photo Management für Zuhause"
@@ -100,8 +101,8 @@ time_format_blog = "02.01.2006"
 section = ["HTML", "print", "RSS"]
 
 [params]
-copyright = "The Docsy Authors"
-privacy_policy = "https://policies.google.com/privacy"
+copyright = "The photocastle Authors"
+privacy_policy = "https://photocastle.github.io/privacy"
 
 # First one is picked as the Twitter card image if not set on page.
 # images = ["images/project-illustration.png"]
@@ -125,9 +126,9 @@ version = "0.0"
 url_latest_version = "https://example.com"
 
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
-github_repo = "https://github.com/google/docsy-example"
+github_repo = "https://github.com/photocastle/photocastle.github.io"
 # An optional link to a related project repo. For example, the sibling repository where your product code lives.
-github_project_repo = "https://github.com/google/docsy"
+github_project_repo = "https://github.com/photocastle"
 
 # Specify a value here if your content directory is not in your repo's root directory
 # github_subdir = ""
@@ -199,7 +200,7 @@ enable = false
 # Developer relevant links. These will show up on right side of footer and in the community page if you have one.
 [[params.links.developer]]
 	name = "GitHub"
-	url = "https://github.com/google/docsy"
+	url = "https://github.com/photocastle"
 	icon = "fab fa-github"
         desc = "Development takes place here!"
 [[params.links.developer]]
